Fixed sidebar spacing; created structure for Product page

--- a/CSS/Sidebar.css
+++ b/CSS/Sidebar.css
@@ -61,7 +61,7 @@
 
 .sidebar-nav li {
     text-indent: 20px;
-    line-height: 40px;
+    line-height: 33px;
 }
 
 .sidebar-nav li a {
